--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
 	<uses-permission android:name="android.permission.VIBRATE"/>
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".GameLogic"
+        <activity android:name=".FooTD"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
