add andengine physics extension for vector2 class

--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="AndEnginePhysicsBox2DExtension"/>
 	<classpathentry kind="src" path="AndEngineMultiTouch"/>
 	<classpathentry kind="src" path="AndEngine"/>
 	<classpathentry kind="src" path="gen"/>
